Added Jenkinsfile note
Signed-off-by: Vikram Vaswani <vikram@dagger.io>

--- a/docs/current/cloud/snippets/get-started/go/Jenkinsfile
+++ b/docs/current/cloud/snippets/get-started/go/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
     stage("dagger") {
       steps {
         sh '''
-            dagger run go run main.go./ci ci
+            dagger run go run main.go
         '''
       }
     }
