Switched example pipeline and CI samples to Node
Signed-off-by: Vikram Vaswani <vikram@dagger.io>

--- a/docs/current/cloud/snippets/get-started/ci/Jenkinsfile
+++ b/docs/current/cloud/snippets/get-started/ci/Jenkinsfile
@@ -9,7 +9,8 @@ pipeline {
     stage("dagger") {
       steps {
         sh '''
-            dagger run go run main.go
+            npm ci
+            dagger run node index.mjs
         '''
       }
     }
