--- a/docs/current/cloud/snippets/get-started/ci/circle.yml
+++ b/docs/current/cloud/snippets/get-started/ci/circle.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/go:1.20 # select appropriate runtime for pipeline
+      - image: cimg/node:lts # select appropriate runtime for pipeline
     // highlight-start
     environment: # for GitHub, GitLab, BitBucket only
       CIRCLE_PIPELINE_NUMBER: << pipeline.number >> # for GitHub, GitLab, BitBucket only
@@ -15,11 +15,14 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
+          name: Install deps
+          command: npm ci
+      - run:
           name: Install Dagger CLI
              command: cd /usr/local && { curl -L https://dl.dagger.io/dagger/install.sh | sh; cd -; }
       - run:
           name: Run Dagger pipeline
-          command: dagger run go run main.go
+          command: dagger run node index.mjs
 workflows:
   dagger:
     jobs:
