--- a/docs/current/cloud/snippets/get-started/ci/gitlab.yml
+++ b/docs/current/cloud/snippets/get-started/ci/gitlab.yml
@@ -1,5 +1,5 @@
 .docker:
-  image: golang:1.20-alpine
+  image: node:18-alpine
   services:
     - docker:${DOCKER_VERSION}-dind
   variables:
@@ -20,9 +20,10 @@
 build:
   extends: [.dagger]
   script:
-    - dagger run go run main.go
+    - npm ci
+    - dagger run node index.mjs
 // highlight-start
-# optional
+# optional, run workflow only on merge requests
 workflow:
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
