--- a/docs/current/cloud/snippets/get-started/ci/circle.yml
+++ b/docs/current/cloud/snippets/get-started/ci/circle.yml
@@ -23,6 +23,8 @@ jobs:
       - run:
           name: Run Dagger pipeline
           command: dagger run node index.mjs
+      # for ephemeral runners only: override the default docker stop timeout and
+      # give the Dagger Engine more time to push cache data to Dagger cloud
      - run:
          name: Stop Dagger Engine
          command: docker stop -t 300 $(docker ps --filter name="dagger-engine-*" -q)
