--- a/docs/current/cloud/snippets/get-started/ci/gitlab.yml
+++ b/docs/current/cloud/snippets/get-started/ci/gitlab.yml
@@ -22,4 +22,6 @@ build:
   script:
     - npm ci
     - dagger run node index.mjs
+    # for ephemeral runners only: override the default docker stop timeout and
+    # give the Dagger Engine more time to push cache data to Dagger cloud
     - docker stop -t 300 $(docker ps --filter name="dagger-engine-*" -q)
